--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - develop
       - "!main"
+  push:
+    branches:
+      - develop
+      - "!main"
   workflow_dispatch:
 
 jobs:
