--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,7 +3,6 @@ name: continuous-deployment
 on:
   pull_request:
     branches:
-      - "!develop"
       - main
   workflow_dispatch:
 
@@ -37,7 +36,7 @@ jobs:
           
   deploy-prod:
     runs-on: ubuntu-latest
-    needs: build-server
+    needs: build-deployment
     environment:
       name: 'Prod'
       url: ${{ steps.deploy-to-azure.outputs.webapp-url }}
