--- a/RescueHubProject/src/main/resources/application.properties
+++ b/RescueHubProject/src/main/resources/application.properties
@@ -11,4 +11,6 @@ spring.h2.console.path=/h2-console
 logging.level.org.springframework.boot.autoconfigure.h2=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=TRACE
 spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#use create-drop if u want to drop the tables when starting app ;]
 spring.jpa.hibernate.ddl-auto=create-drop
