--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,48 +7,42 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-deployment:
+  build-deploy:
     runs-on: ubuntu-latest
+    environment:
+      name: 'Prod'
     steps:
       - uses: actions/checkout@v2
+      
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
           java-version: '17'
           distribution: 'temurin'
+          
       - name: Grant execute permission for gradlew
         run: | 
           cd RescueHubProject
           chmod +x gradlew
+          
       - name: Build with Gradle
         run: |
           cd RescueHubProject
           ./gradlew build
+          
       - name: Test with Gradle
         run: |
           cd RescueHubProject
           ./gradlew test
-      - name: Upload artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: build
-          path: RescueHubProject/build/libs
+          
+      - name: Archive production artifacts
+        run: |
+          cd RescueHubProject/build
+          zip -r ../build/libs/RescueHubProject.zip *
 
-  deploy-prod:
-    runs-on: ubuntu-latest
-    needs: build-deployment
-    environment:
-      name: 'Prod'
-      url: ${{ steps.deploy-to-azure.outputs.webapp-url }}
-    steps:
-    - name: Download build artifact
-      uses: actions/download-artifact@v3.0.2
-      with:
-        name: build
-    - name: Azure 'Deploy to Azure'
-      id: deploy-to-azure
-      uses: Azure/webapps-deploy@v2.2.6
-      with:
-        app-name: 'RescueHubApi'
-        publish-profile: ${{ secrets.PUBLISH_PROFILE_SERVER_PROD }}
-        package: "build/libs/*.jar"
+      - name: Deploy to Azure
+        uses: Azure/webapps-deploy@v2.2.6
+        with:
+          app-name: 'RescueHubApi'
+          publish-profile: ${{ secrets.PUBLISH_PROFILE_SERVER_PROD }}
+          package: 'RescueHubProject/build/libs/RescueHubProject.zip'
