--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: build
-          path: RescueHubProject/build/libs/*.jar
+          path: RescueHubProject/build/libs/RescueHubProject*.jar
 
   deploy-prod:
     runs-on: ubuntu-latest
@@ -51,4 +51,4 @@ jobs:
       with:
         app-name: 'RescueHubApi'
         publish-profile: ${{ secrets.PUBLISH_PROFILE_SERVER_PROD }}
-        package: '*.jar'
+        package: 'RescueHubProject*.jar'
