--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -32,8 +32,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: build
-          path: RescueHubProject/build/libs/RescueHubProject*.jar
-
+          path: RescueHubProject/build/libs/RescueHubProject-0.0.1-SNAPSHOT.jar
   deploy-prod:
     runs-on: ubuntu-latest
     needs: build-deployment
@@ -51,4 +50,4 @@ jobs:
       with:
         app-name: 'RescueHubApi'
         publish-profile: ${{ secrets.PUBLISH_PROFILE_SERVER_PROD }}
-        package: 'RescueHubProject*.jar'
+        package: 'RescueHubProject-0.0.1-SNAPSHOT.jar'
