--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,31 +23,22 @@ jobs:
       - name: Build with Gradle
         run: |
           cd RescueHubProject
-          ./gradlew build
-      - name: Test with Gradle
+          ./gradlew bootJar
+      - name: Log in to Azure Container Registry
+      - uses: azure/docker-login@v1
+        with:
+          login-server: <myContainerRegistry>.azurecr.io
+          username: ${{ secrets.ACR_USERNAME }}
+          password: ${{ secrets.ACR_PASSWORD }}
+      - name: Build and push Docker image
         run: |
           cd RescueHubProject
-          ./gradlew test
-      - name: Upload artifact
-        uses: actions/upload-artifact@v2
+          docker build -t rescuehub.azurecr.io/my-app:${{ github.sha }} .
+          docker push rescuehub.azurecr.io/my-app:${{ github.sha }}
+      - name: Deploy to Azure App Service
+      - uses: azure/webapps-deploy@v2
         with:
-          name: build
-          path: RescueHubProject/build/libs/RescueHubProject-0.0.1-SNAPSHOT.jar
-  deploy-prod:
-    runs-on: ubuntu-latest
-    needs: build-deployment
-    environment:
-      name: 'Prod'
-      url: ${{ steps.deploy-to-azure.outputs.webapp-url }}
-    steps:
-    - name: Download build artifact
-      uses: actions/download-artifact@v3.0.2
-      with:
-        name: build
-    - name: Deploy to Azure Web App
-      id: deploy-to-azure
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: 'RescueHubApi'
-        publish-profile: ${{ secrets.PUBLISH_PROFILE_SERVER_PROD }}
-        package: 'RescueHubProject-0.0.1-SNAPSHOT.jar'
+          app-name: <RescueHubApp>
+          slot-name: production
+          images: rescuehub.azurecr.io/my-app:${{ github.sha }}
+
