--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Log in to Azure Container Registry
       - uses: azure/docker-login@v1
         with:
-          login-server: <myContainerRegistry>.azurecr.io
+          login-server: rescuehub.azurecr.io
           username: ${{ secrets.ACR_USERNAME }}
           password: ${{ secrets.ACR_PASSWORD }}
       - name: Build and push Docker image
