--- a/RescueHubProject/build.gradle
+++ b/RescueHubProject/build.gradle
@@ -50,6 +50,9 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
     implementation 'javax.servlet:javax.servlet-api:3.1.0'
 
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    testImplementation 'org.springframework.security:spring-security-test'
+
 }
 
 
