--- a/RescueHubProject/build.gradle
+++ b/RescueHubProject/build.gradle
@@ -28,6 +28,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.mapstruct:mapstruct:1.4.2.Final'
 
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+
+
     implementation 'com.h2database:h2'
     implementation group: 'org.hibernate', name: 'hibernate-validator', version: '6.1.0.Final'
 
