--- a/RescueHubProject/build.gradle
+++ b/RescueHubProject/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
     implementation 'javax.servlet:javax.servlet-api:3.1.0'
 
+    implementation 'org.modelmapper:modelmapper:2.4.4'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     testImplementation 'org.springframework.security:spring-security-test'
 
