--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: 'Dev'
-      url: ${{ steps.Deploy_to_Azure_App_Service.webapp-url }}
+      url: https://rescuehubapp-dev.azurewebsites.net
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 17
@@ -51,7 +51,7 @@ jobs:
     needs: build-deployment-dev
     environment:
       name: 'Prod'
-      url: ${{ steps.Deploy_to_Azure_App_Service.webapp-url }}
+      url: https://rescuehubapp.azurewebsites.net
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
