--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,5 +74,5 @@ jobs:
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.MY_TOKEN }}
           branch: documentation-update
