--- a/.github/workflows/autodoc.yml
+++ b/.github/workflows/autodoc.yml
@@ -66,7 +66,7 @@ jobs:
             
       - name: Commit PDF file
         run: |
-          git switch develop
+          git checkout develop
           git add docs/api-documentation.pdf
           git commit -m "Add documentation PDF" -a  
                  
