--- a/.github/workflows/autodoc.yml
+++ b/.github/workflows/autodoc.yml
@@ -66,7 +66,7 @@ jobs:
             
       - name: Commit PDF file
         run: |
-          git checkout develop
+          git checkout origin/develop
           git add docs/api-documentation.pdf
           git commit -m "Add documentation PDF" -a  
                  
@@ -76,4 +76,4 @@ jobs:
           token: ${{ secrets.MY_GITHUB_TOKEN }}
           persist-credentials: false
           push: true
-          ref: develop
+          ref: origin/develop
