--- a/.github/workflows/autodoc.yml
+++ b/.github/workflows/autodoc.yml
@@ -68,6 +68,7 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
+          git checkout -b develop
           git add docs/api-documentation.pdf
           git commit -m "Add documentation PDF" -a
           
@@ -75,4 +76,4 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.MY_TOKEN }}
-          branch: documentation-update
+          branch: develop
