--- a/RescueHubProject/build.gradle
+++ b/RescueHubProject/build.gradle
@@ -58,6 +58,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     testImplementation 'org.springframework.security:spring-security-test'
 
+    //testImplementation 'org.mockito:mockito-core:3.x.x'
+
 }
 
 
